<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="me.leoyuu.mysqlclient.module.table.TableDetailActivity">
    <item
        android:id="@+id/action_cmd"
        android:orderInCategory="1"
        android:title="@string/action_cmd"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_db_new"
        android:orderInCategory="2"
        android:title="@string/action_db_new"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="4"
        android:title="@string/refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_view_record"
        android:orderInCategory="4"
        android:title="@string/action_view_record"
        app:showAsAction="never" />

</menu>
