<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/md_white_color_code"
    android:orientation="vertical"
    android:elevation="2dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/table_name">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/table_design_table_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:id="@+id/table_design_col_add"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/md_white_color_code"
            android:contentDescription="@string/table_col_add"
            android:scaleType="centerInside"
            app:srcCompat="@android:drawable/ic_input_add" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="center"
            android:background="@drawable/shape_border_grey"
            android:text="@string/table_col_name"
            android:textColor="@color/md_black_color_code"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="center"
            android:background="@drawable/shape_border_grey"
            android:text="@string/table_col_type"
            android:textColor="@color/md_black_color_code"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="center"
            android:background="@drawable/shape_border_grey"
            android:text="@string/table_col_len"
            android:textColor="@color/md_black_color_code"
            android:textSize="12sp" />

        <TextView
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="center"
            android:background="@drawable/shape_border_grey"
            android:text="@string/table_col_nonnull"
            android:textSize="12sp"
            android:textColor="@color/md_black_color_code" />

        <TextView
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="center"
            android:background="@drawable/shape_border_grey"
            android:textSize="12sp"
            android:text="@string/table_col_primary_key"
            android:textColor="@color/md_black_color_code" />

        <TextView
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="center"
            android:background="@drawable/shape_border_grey"
            android:textSize="12sp"
            android:text="@string/more"
            android:textColor="@color/md_black_color_code" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/table_design_col_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>