<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/col_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/md_black_color_code"
            tools:text="ID"/>

        <TextView
            android:id="@+id/col_del_btn"
            android:layout_gravity="end"
            android:textSize="12sp"
            android:text="@string/table_col_del"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/table_col_default">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/col_edit_default_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/table_col_scale">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/col_edit_scale_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/table_col_comment">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/col_edit_comment_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>


    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/col_edit_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            style="?buttonBarButtonStyle"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/col_edit_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            style="?buttonBarButtonStyle"
            android:text="@string/ok"/>
    </android.support.v7.widget.ButtonBarLayout>
</LinearLayout>