<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:elevation="4dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/row_detail_col_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:minWidth="56dp"
            android:elevation="2dp"
            android:textSize="24sp"
            android:text="@string/col_name"
            android:textColor="@color/md_black_color_code"/>

        <TextView
            android:id="@+id/row_detail_col_info_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:textSize="12sp"
            android:text="@string/row_detail_col"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:textIsSelectable="true"
        android:id="@+id/row_detail_col_value_et"
        android:hint="@string/row_detail_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>
</LinearLayout>