<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.leoyuu.mysqlclient.module.sqlcmd.SqlCmdActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="8dp"
        app:navigationIcon="@drawable/abc_ic_ab_back_am_alpha"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="命令行界面"
        app:titleTextColor="@color/title_text_color" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/sql_et_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/sql_et_prompt"
        app:layout_constraintTop_toBottomOf="@id/toolbar">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/sql_cmd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:labelFor="@id/sql_cmd_btn"
            android:maxLines="8"
            tools:text="hello world hello world hello world hello world hello world hello world hello world hello world"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/clear_res_btn"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/sql_res_clear"
                android:textColor="@color/md_white_color_code" />

            <Button
                android:id="@+id/sql_cmd_btn"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/sql_cmd_do"
                android:textColor="@color/md_white_color_code" />
        </RelativeLayout>
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/sql_cmd_res_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sql_et_lay" />

</android.support.constraint.ConstraintLayout>
